--- a/DZ25/style.css
+++ b/DZ25/style.css
@@ -27,3 +27,9 @@ pre {
    word-wrap: break-word;
    /* Internet Explorer 5.5+ */
 }
+
+img {
+   margin: 10px 0;
+   width: 100%;
+   height: auto;
+}
